--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -15,7 +15,22 @@
                   android:layout_height="wrap_content">
 
         <TextView
-                android:id="@+id/text"
+                android:id="@+id/text_id1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:text="@{Integer.toString(data.id1)}" />
+
+        <TextView
+                android:id="@+id/text_id2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:text="@{Integer.toString(data.id2)}" />
+
+
+        <TextView
+                android:id="@+id/text_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
